<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mach dein Spiel</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="usernameRes">Username:</string>
    <string name="usernameHint">Username</string>
    <string name="passwordRes">Password:</string>
    <string name="passwordHint">Password</string>
    <string name="loginBtnRes">Login</string>
    <string name="loginBtnRegister">Register Account</string>
    <string name="helpRes">Help</string>
    <string name="gamecenter">Gamecenter</string>
    <string name="_spiel_">##Spiel##</string>
    <string name="_playername_">##Playername##</string>
    <string name="_teamname1_">##Teamname##</string>
    <string name="_teamname2_">##Teamname##</string>
    <string name="_teamname3_">##Teamname##</string>
    <string name="_teamname4_">##Teamname##</string>
    <string name="_teamname5_">##Teamname##</string>
    <string name="_teamname6_">##Teamname##</string>
    <string name="_teamname7_">##Teamname##</string>
    <string name="_teamname8_">##Teamname##</string>
    <string name="_1_10">1/10</string>
    <string name="start">Start</string>
    <string name="leave">Leave</string>


</resources>
